# langgraph-backend

./: .gitignore  AGENTS.md  APPROVAL_IMPLEMENTATION.md  COPILOTKIT_INTEGRATION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
.helm/templates/: _helpers.tpl  configmap-app.yaml  configmap-workflows.yaml  deployment.yaml  service.yaml
.helm/workflows/: feature_flow.json
app/: compat.py  main.py
app/agents/: local_agent.py  workflow_assistant.yaml
app/api/: app.py  dependencies.py
app/api/middleware/: auth.py
app/api/routes/: agent_callbacks.py  agents.py  callbacks.py  chat.py  graphs.py  health.py  llm.py  webhooks.py  workflows.py
app/application/services/: classifier_service.py  llm_agent_service.py  orchestration_service.py  planning_service.py  workflow_service.py
app/core/: config.py  container.py
app/domain/: exceptions.py
app/domain/interfaces/: actions.py  openhands.py  repositories.py  tools.py  workflow_registry.py
app/domain/models/: agent_addon.py  agent_definition.py  graph_run.py  runtime.py  workflow_definition.py
app/infrastructure/: pvc_cleanup.py
app/infrastructure/actions/: http_executor.py  loader.py  registry.py  templates.py
app/infrastructure/auth/: auth_service.py
app/infrastructure/config/: __init__.py  graph_loader.py  workflow_loader.py
app/infrastructure/integrations/: openhands.py
app/infrastructure/notifications/: webhook_notifier.py
app/infrastructure/orchestration/: chat_agent_loader.py  checkpointer.py  default_workflow.py  graph.py  router_agent.py  yaml_graph.py
app/infrastructure/persistence/: agent_backend.py  mongo.py  workflow_backend.py
app/infrastructure/tools/: __init__.py  langchain_tools.py  mcp_client.py
app/infrastructure/tracing/: callback_handler.py
app/infrastructure/triggers/: cron_scheduler.py  webhook_validator.py
app/runtime/: __init__.py  base.py  docker.py  factory.py  k8s.py  local.py  pvc_manager.py
app/services/: agent_cleanup.py  agent_poller.py
app/steps/: __init__.py  agent_executor.py
client/: README.md  pyproject.toml
client/agent_server/: __init__.py  __main__.py  backend_client.py  server.py
client/examples/: Dockerfile
client/examples/claude_agent/: agent.py
client/examples/langgraph_agent/: agent.py
graph_definitions/: code-review-loop.yaml
graphs/: dev-assistant.yaml  example-ticket-execution.yaml  workflow-1779459255107.yaml  workflow-1779461329465.yaml
helm/: values.yaml
helm/templates/: configmap-app.yaml  configmap-graphs.yaml  deployment.yaml  ingress.yaml  rbac.yaml  serviceaccount.yaml
helm/workflows/: design_first_flow.json  multi_repo_delivery.json
scripts/migrations/: 2026-07-06_add_tools_addon_to_agents.py  2026-07-06_update_develop_ticket_planner_routes.py  2026-07-06_update_planner_prompt_mode_b.py  2026-07-07_researcher_prompt_curl_jq.py  2026-07-23_add_plan_approval_routes.py
tests/: conftest.py  test_action_steps.py  test_agent_callbacks_tools.py  test_agents_api.py  test_approval_flow.py  test_auth_service.py  test_default_workflow.py  test_graphs_api.py  test_loopback_step_status.py  test_out_of_band_state.py  test_planning_service.py  test_router_agent.py  test_run_trace.py  test_webhooks_api.py  test_workflow_backend.py  test_workflow_loader.py  test_workflows_api.py  test_yaml_graph.py
tests/integration/: conftest.py  test_agentic_loop.py  test_approval_flow.py  test_approval_routes.py  test_classifier_flow.py  test_conditional_context.py  test_graph_loader.py  test_llm_tool_call_flow.py  test_loop_routing.py  test_mcp_llm_http_flow.py  test_mcp_pipeline.py  test_multi_approval.py  test_parallel_flow.py  test_python_action_loader.py  test_restart_recovery.py  test_workflow_definitions_api.py
tests/unit/: test_agent_addon_model.py  test_agent_executor_output.py  test_agent_task_key.py  test_k8s_runtime_resume.py  test_previous_task_injection.py  test_tools_addon_gating.py  test_webhook_notifier.py  test_yaml_graph_usage_reducer.py
workflows/: classifier_flow.json  design_first_flow.json  feature_flow.json  jira_task_with_approval.json  llm_tool_call_flow.json  mcp_llm_http_flow.json  parallel_flow.json  python_action_flow.json  test_actions.py
