[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-backend"
version = "0.1.0"
description = "AI development orchestration backend built with FastAPI, LangGraph, LangServe, and MongoDB."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Airteam" }]
dependencies = [
  "fastapi>=0.135.0,<1.0.0",
  "uvicorn[standard]>=0.44.0,<1.0.0",
  "langgraph>=1.1.0,<2.0.0",
  "langchain>=1.2.0,<2.0.0",
  "langserve>=0.3.3,<1.0.0",
  "pydantic>=2.12.0,<3.0.0",
  "pydantic-settings>=2.13.0,<3.0.0",
  "motor>=3.7.0,<4.0.0",
  "pymongo>=4.16.0,<5.0.0",
  "httpx>=0.28.0,<1.0.0",
  "langchain-mcp-adapters>=0.2.0,<1.0.0",
  "langchain-anthropic>=1.4.0,<2.0.0",
  "langchain-openai>=1.1.0,<2.0.0",
  "pyjwt[crypto]>=2.8.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "asgi-lifespan>=2.1.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
