[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-backend"
version = "1.0.9"
description = "AI development orchestration backend built with FastAPI, LangGraph, LangServe, and MongoDB."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Airteam" }]
dependencies = [
  # Upper bounds on fastapi/httpx/langchain* driven by copilotkit 0.1.x constraints.
  "fastapi>=0.115.14,<0.116.0",
  "uvicorn[standard]>=0.44.0,<1.0.0",
  # langgraph 0.6+ needs langgraph-sdk>=0.2.2, which conflicts with copilotkit's <0.2.0 bound.
  "langgraph>=0.5.4,<0.6.0",
  "langchain>=0.3.28,<0.4.0",
  "pydantic>=2.12.5,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "httpx>=0.27.2,<0.28.0",
  "langchain-mcp-adapters>=0.2.2,<1.0.0",
  "langchain-anthropic>=0.3.22,<0.4.0",
  "langchain-openai>=0.3.35,<0.4.0",
  "pyjwt[crypto]>=2.12.1,<3.0.0",
  "pyyaml>=6.0.3,<7.0.0",
  "motor>=3.7.1,<4.0.0",
  "pymongo>=4.16.0,<5.0.0",
  "copilotkit>=0.1.39,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "asgi-lifespan>=2.1.0,<3.0.0",
  "httpx>=0.27.2,<0.28.0"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
