[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-backend"
version = "1.2.51"
description = "AI development orchestration backend built with FastAPI, LangGraph, LangServe, and MongoDB."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Airteam" }]
dependencies = [
  "fastapi>=0.115.14,<0.116.0",
  "uvicorn[standard]>=0.44.0,<1.0.0",
  "langgraph>=1.1.0,<2.0.0",
  "langchain>=1.2.0,<2.0.0",
  "pydantic>=2.12.5,<3.0.0",
  "pydantic-settings>=2.13.1,<3.0.0",
  "httpx>=0.27.2,<1.0.0",
  "langchain-mcp-adapters>=0.2.2,<1.0.0",
  "langchain-anthropic>=1.0.0,<2.0.0",
  "langchain-openai>=1.0.0,<2.0.0",
  "pyjwt[crypto]>=2.12.1,<3.0.0",
  "pyyaml>=6.0.3,<7.0.0",
  "motor>=3.7.1,<4.0.0",
  # langgraph-checkpoint-mongodb vendored in-tree requires pymongo<4.16
  "pymongo>=4.12.0,<4.16.0",
  "copilotkit>=0.1.87,<1.0.0",
  "langchain-google-genai>=4.2.1,<5.0.0",
  "apscheduler>=3.10,<4.0",
  "langsmith>=0.2.0,<1.0.0",
  "aiodocker>=0.21.0,<1.0.0",
  "kubernetes>=28.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "asgi-lifespan>=2.1.0,<3.0.0",
  "httpx>=0.27.2,<0.28.0"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
